tests/diagnostics/file_roles/manifest_declarations/type_declaration/expect.txt
# exit: 1
input/PACKAGE.coppice:1:6: error: PACKAGE.coppice may only contain export declarations
  type Token :: struct {
       ^
